--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,13 @@
             </intent-filter>
         </activity>
         <activity
-<<<<<<< Updated upstream
             android:name=".Recommendation"
-            android:label="@string/title_activity_recommendation" >
-=======
+            android:label="@string/title_activity_recommendation" ></activity>
+
+        <activity
             android:name=".drawer"
             android:label="@string/title_activity_drawer" >
->>>>>>> Stashed changes
+
         </activity>
     </application>
 
