--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,29 +10,33 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name=".place"
+            android:label="@string/title_activity_place" >
 
+        </activity>
         <activity
             android:name=".ChannelMain">
+
+        </activity>
+        <activity
+            android:name=".login"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".login"
-            android:label="@string/app_name" >
 
         </activity>
         <activity
             android:name=".Recommendation"
-            android:label="@string/title_activity_recommendation" ></activity>
-
+            android:label="@string/title_activity_recommendation" />
         <activity
             android:name=".drawer"
             android:label="@string/title_activity_drawer" >
-
         </activity>
+
     </application>
 
 </manifest>
