新增Trip(行程)的Java檔，但還是套list_single的xml檔 Recommendation的PHP URL我改成在group4資料夾下，目前才會work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Recommendation"
-            android:label="@string/title_activity_recommendation" />
+            android:label="@string/title_activity_recommendation" >
+
+        </activity>
+        <activity
+            android:name=".Trip"
+            android:label="@string/title_tripioneer_tour_listview" >
+
+
+        </activity>
+
         <activity
             android:name=".drawer"
             android:label="@string/title_activity_drawer" >
