--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,17 @@
         </activity>
         <activity
             android:name=".ChannelMain">
-
-        </activity>
-        <activity
-            android:name=".login"
-            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".Login"
+            android:label="@string/app_name" >
+
         </activity>
         <activity
             android:name=".Recommendation"
