--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/tp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -16,7 +16,13 @@
 
         </activity>
         <activity
-            android:name=".ChannelMain">
+            android:name=".ChannelMain"
+            android:label="ChannelMain">
+
+        </activity>
+        <activity
+            android:name=".Login"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,11 +30,7 @@
             </intent-filter>
 
         </activity>
-        <activity
-            android:name=".Login"
-            android:label="@string/app_name" >
 
-        </activity>
         <activity
             android:name=".Recommendation"
             android:label="@string/title_activity_recommendation" >
@@ -40,10 +42,16 @@
 
 
         </activity>
+        <activity android:name=".MainActivity"
+            android:label="             推薦"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
-        <activity
-            android:name=".drawer"
-            android:label="@string/title_activity_drawer" >
+        </activity>
+
+        <activity android:name=".MainActivity_mod"
+            android:label="             推薦"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+
         </activity>
 
     </application>
