--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,6 @@
         <activity
             android:name=".Login"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
 
@@ -42,16 +37,13 @@
 
 
         </activity>
-        <activity android:name=".MainActivity"
-            android:label="             推薦"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name=".MainActivity_mdsign"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        </activity>
-
-        <activity android:name=".MainActivity_mod"
-            android:label="             推薦"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
     </application>
