--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:21.0.+'
 
 }
