--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
 
 
         </activity>
+        <activity
+            android:name=".Collect"
+             >
+
+        </activity>
         <activity android:name=".MainActivity_mdsign"
             >
             <intent-filter>
