--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.android.support:cardview-v7:21.0.+'
-
+    compile 'com.google.android.gms:play-services:7.5.0'
+    
 }
+
