--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mis.tripioneer" >
 
+    <permission
+        android:name="mis.tripioneer.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="mis.tripioneer.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -18,6 +26,7 @@
         <activity
             android:name=".ChannelMain"
             android:label="ChannelMain">
+            android:name=".ChannelMain">
 
         </activity>
         <activity
@@ -35,7 +44,6 @@
             android:name=".Trip"
             android:label="@string/title_tripioneer_tour_listview" >
 
-
         </activity>
         <activity
             android:name=".Collect"
@@ -44,13 +52,44 @@
         </activity>
         <activity android:name=".MainActivity_mdsign"
             >
+
+        </activity>
+
+        <activity
+            android:name=".Search"
+            android:label="@string/title_activity_nearsearch" >
+
+        </activity>
+        <activity
+            android:name=".Map"
+            android:label="@string/title_activity_map" >
+
+        </activity>
+        <activity
+            android:name=".Place_navigation"
+            android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name=".Place_replace"
+            android:label="@string/title_activity_map" >
+
+        </activity>
+        <activity
+            android:name=".main_road"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_api_key" />
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
 </manifest>
