--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,14 +36,12 @@
         </activity>
         <activity
             android:name=".Trip"
-
             android:label="行程" >
         </activity>
         <activity
             android:name=".Collect"
             android:label="收藏庫" >
         </activity>
-
         <activity
             android:name=".Search"
             android:label="@string/title_activity_nearsearch" >
@@ -67,6 +65,7 @@
         <activity
             android:name=".main_road"
             android:label="@string/app_name" >
+
         </activity>
         <activity
             android:name=".Place_mdsign"
@@ -77,17 +76,30 @@
             android:label="行程" >
 
         </activity>
-        <activity android:name=".MainActivity_mdsign"
+        <activity
+            android:name=".MainActivity_mdsign"
             android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name=".roadplan_choose_mode"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".place_mimic_googlemap"
             android:label="@string/title_activity_place_mimic_googlemap" >
         </activity>
+
+        <activity
+            android:name=".roadplan_choose_map"
+            android:label="@string/app_name" >
+        </activity>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_api_key" />
