--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,28 +11,37 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
+    signingConfigs {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            storeFile file("new-releasekey.keystore")
+            storePassword "gp4gp4123456"
+            keyAlias "releasekeynew"
+            keyPassword "gp4gp4123"
         }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+                signingConfig signingConfigs.release
+            }
+        }
+        compileOptions {
+            encoding "UTF-8"
+        }
+
     }
-    compileOptions {
-        encoding "UTF-8"
+
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile 'com.android.support:appcompat-v7:22.2.0'
+        compile 'com.squareup.picasso:picasso:2.3.2'
+        compile 'de.hdodenhof:circleimageview:1.3.0'
+        compile 'com.android.support:recyclerview-v7:21.0.+'
+        compile 'com.android.support:cardview-v7:21.0.+'
+        compile 'com.google.android.gms:play-services:7.5.0'
+
+        compile 'com.android.support:design:22.2.0'
+        compile 'com.sothree.slidinguppanel:library:3.1.1'
     }
 
 }
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.squareup.picasso:picasso:2.3.2'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.google.android.gms:play-services:7.5.0'
-    
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.sothree.slidinguppanel:library:3.1.1'
-}
-
