--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="頻道" >
         </activity>
         <activity
-            android:name=".login"
+            android:name=".Login"
             android:label="@string/app_name" >
         </activity>
         <activity
