--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,13 +13,13 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("C:\\Program Files\\Java\\jdk1.7.0_71\\bin\\new-releasekey.keystore")
+            storeFile file("C:\\Program Files\\Java\\jdk1.8.0_40\\bin\\new-releasekey.keystore")
             storePassword "gp4gp4123456"
             keyAlias "releasekeynew"
             keyPassword "gp4gp4123"
         }
         debug{
-            storeFile file("C:\\Program Files\\Java\\jdk1.7.0_71\\bin\\new-releasekey.keystore")
+            storeFile file("C:\\Program Files\\Java\\jdk1.8.0_40\\bin\\new-releasekey.keystore")
             storePassword "gp4gp4123456"
             keyAlias "releasekeynew"
             keyPassword "gp4gp4123"
@@ -31,25 +31,26 @@ android {
                 signingConfig signingConfigs.release
             }
         }
-
+    }
+    compileOptions {
+        encoding "UTF-8"
     }
 
-    dependencies {
-        compile fileTree(dir: 'libs', include: ['*.jar'])
-        compile 'com.android.support:appcompat-v7:22.2.0'
-        compile 'com.squareup.picasso:picasso:2.3.2'
-        compile 'de.hdodenhof:circleimageview:1.3.0'
-        compile 'com.android.support:recyclerview-v7:21.0.+'
-        compile 'com.android.support:cardview-v7:21.0.+'
-        compile 'com.google.android.gms:play-services:7.5.0'
+}
 
-        compile 'com.android.support:design:22.2.0'
-        compile 'com.sothree.slidinguppanel:library:3.1.1'
-
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.sothree.slidinguppanel:library:3.1.1'
         compile 'com.android.support:appcompat-v7:22.2.0'
         compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
         compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
         compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
-    }
-
 }
