--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,10 +45,7 @@
         <activity
             android:name=".Search"
             android:label="@string/title_activity_nearsearch" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity
             android:name=".Map"
@@ -62,7 +59,7 @@
         </activity>
         <activity
             android:name=".Place_replace"
-            android:label="@string/title_activity_map" >
+            android:label="置換景點" >
 
 
         </activity>
@@ -83,7 +80,10 @@
         <activity
             android:name=".MainActivity_mdsign"
             android:label="@string/app_name">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".roadplan_choose_mode"
