[快選行程流程90%完成，剩下收藏部分] 1.行程新增完成、可收藏放入資料庫 2.各畫面加上action bar & drawer 3.FIX BUG 快選行程 4.行程標題加上時間標示 5.收藏庫(50%)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         </activity>
         <activity
             android:name=".Search"
-            android:label="@string/title_activity_nearsearch" >
+            android:label="快選行程" >
 
         </activity>
         <activity
@@ -111,6 +111,11 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name=".ShowDb"
+            android:label="測試資料庫" >
+
+        </activity>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_api_key" />
